--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Caglar Oksuz
-logo: /assets/img/me.jpeg
+logo: /assets/img/me2.jpeg
 #description: text below image
 #show_downloads: false
 theme: jekyll-theme-minimal
